--- a/src/style/_variables.scss
+++ b/src/style/_variables.scss
@@ -14,7 +14,7 @@ $gray-800: lighten($gray-base, 25%) !default; // #444
 $gray-900: lighten($gray-base, 18.75%) !default; // #333
 
 $gray-custom-1: #41444e !default;
-$gray-custom-2: #3b4151 !default;
+$gray-custom-2: #091E42 !default;
 
 $color-primary: #89bf04 !default;
 $color-secondary: #9012fe !default;
