--- a/src/style/_topbar.scss
+++ b/src/style/_topbar.scss
@@ -36,14 +36,13 @@
         flex: 3;
         justify-content: flex-end;
 
-        input[type=text]
-        {
-            width: 100%;
-            margin: 0;
-
-            border: 2px solid $topbar-download-url-wrapper-element-border-color;
-            border-radius: 4px 0 0 4px;
-            outline: none;
+        input[type=text] {
+          width: 100%;
+          margin: 0;
+          @include text-body();
+          border: 2px solid $topbar-download-url-wrapper-element-border-color;
+          border-radius: 4px 0 0 4px;
+          outline: none;
         }
 
         .select-label
